# Blazor

./: .deployment  .editorconfig  .gitignore  Blazor.Core.sln  Blazor.ProjectTemplate.sln  Blazor.sln  NuGet.config  README.md  build-packages.cmd  build-vsextension.cmd  build.sh  deploy.cmd  global.json  version.props
artifacts/: placeholder.txt
samples/JSLibs/: JSLibs.csproj  README.md
samples/MicroApp/: .gitignore  README.md  build.cmd  serve.cmd
src/AngleSharp/: AngleSharp.Core.csproj
src/Blazor.Compiler/: AttributesHack.cs  Blazor.Compiler.csproj  CodeRewriting.cs  MyDirectiveIRPass.cs  Program.cs  ProjectReferenceUtil.cs  RazorVDomCompiler.cs  ValidationHack.cs  VirtualDomCSharpLoweringPhase.cs  VirtualDomDocumentWriter.cs  VirtualDomTarget.cs
src/Blazor.DebugAdapter/: Blazor.DebugAdapter.csproj  BlazorDebugSession.cs  BreakpointManager.cs  Program.cs  (+17 more)
src/DNA/native/: Bugs.txt  CMakeLists.txt  ChangeLog.txt  Notes on debugging.txt  README.md  System.Attribute.h  build.cmd  dna.pro  dna.vcxproj  dna.vcxproj.filters  js-interop.js  pre.js
src/DNA/native/src/: CIL_OpCodes.h  CLIFile.c  CLIFile.h  Compat.h  Config.h  Delegate.c  Delegate.h  EvalStack.h  Finalizer.c  Finalizer.h  Generics.c  Generics.h  Heap.c  Heap.h  InternalCall.c  InternalCall.h  JIT.c  JIT.h  JIT_Execute.c  JIT_OpCodes.h  JSInterop.c  JSInterop.h  License.txt  Makefile  MetaData.c  MetaData.h  MetaDataTables.h  MetaData_Fill.c  MetaData_Search.c  MethodState.c  MethodState.h  PInvoke.c  PInvoke.h  PInvoke_CaseCode.h  PInvoke_TypeDef.h  RVA.c  RVA.h  Reflection.c  Reflection.h  Sys.c  (+61 more)
(+603 files in other folders)
